# ifcplusplus

./: CMakeLists.txt  README.md
.github/workflows/: build-examples.yml
IfcPlusPlus/: CMakeLists.txt
IfcPlusPlus/src/ifcpp/geometry/: GeomDebugDump.h
examples/CreateIfcWallAndWriteFile/: CMakeLists.txt
examples/IfcJsonNetRenderer/: CMakeLists.txt  CMakeLists_new.txt  README.md  TDD_INSTRUCTIONS.md  example_usage.sh
examples/IfcJsonNetRenderer/examples/IfcJsonNetRenderer/: CMakeLists_fixed.txt
examples/IfcJsonNetRenderer/src/: ifc_parser.cpp  ifc_parser.h  ifc_parser_simple.cpp  jsonnet_renderer.cpp  jsonnet_renderer.h  main.cpp  main_simple.cpp  rest_endpoints.cpp  rest_endpoints.h
examples/IfcJsonNetRenderer/templates/: building-summary.jsonnet  wall-analysis.jsonnet
examples/IfcJsonNetRenderer/tests/: CMakeLists.txt  README.md  test_ifc_parser.cpp  test_integration.cpp  test_jsonnet_renderer.cpp  test_main.cpp  test_rest_endpoints.cpp
examples/LoadFileExample/: CMakeLists.txt
examples/LoadFileExample/src/: main.cpp
examples/SimpleViewerExampleQt/: CMakeLists.txt
